# olympus

./: CLAUDE.md  README.md  docker-compose.yml  package-lock.json
.github/workflows/: api-lint.yml  api-test.yml  web-test.yml
apps/api/: MIGRATION_BEST_PRACTICES.md  README.md  diagnose_confidence.py  pyproject.toml
apps/api/alembic/versions/: 20251106_add_organization_members.py  20251106_rename_query_to_thread.py  3a65059eb513_add_messages_table_for_multi_turn_.py  a95d41dc7f4f_migrate_existing_threads_to_messages.py
apps/api/app/: main.py
apps/api/app/agents/: __init__.py  query_agent.py  thread_agent.py
apps/api/app/graphql/: mutation.py  query.py  types.py
apps/api/app/models/: __init__.py  document.py  message.py  organization.py  organization_member.py  space.py  thread.py  thread_document.py  user.py
apps/api/app/routes/: query_stream.py  thread_stream.py
apps/api/app/services/: ai_agent.py  chunking_service.py  citation_service.py
apps/api/tests/: conftest.py  test_ai_agent.py  test_graphql_queries.py  test_graphql_spaces.py  test_multi_turn_conversation.py  test_query_stream_endpoint.py  test_rag_pipeline_integration.py  test_thread_mutations.py  test_thread_stream_endpoint.py
apps/web/: .eslintignore  next.config.mjs  package.json  schema.graphql
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/auth/callback/: page.tsx
apps/web/src/app/(auth)/confirm/: page.tsx
apps/web/src/app/(auth)/verify-email/: page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/spaces/: layout.tsx
apps/web/src/app/dashboard/spaces/[id]/: page.tsx
apps/web/src/app/dashboard/spaces/[id]/threads/: layout.tsx  page.tsx
apps/web/src/app/dashboard/spaces/[id]/threads/[threadId]/: page.tsx
apps/web/src/app/dashboard/threads/: page.tsx
apps/web/src/app/settings/: layout.tsx
apps/web/src/app/settings/organizations/[orgId]/: page.tsx
apps/web/src/app/settings/organizations/[orgId]/members/: page.tsx
apps/web/src/app/threads/: layout.tsx  page.tsx
apps/web/src/app/threads/[threadId]/: page.tsx
apps/web/src/components/dashboard/: DashboardStatCard.tsx  RecentDocumentItem.tsx  RecentThreadItem.tsx
apps/web/src/components/debug/: VectorSearchDebugger.tsx
apps/web/src/components/editor/: TipTapEditor.tsx
apps/web/src/components/layout/: AppHeader.tsx  AppSidebar.tsx  Header.tsx  NavItem.tsx  NavSection.tsx  OrganizationInitializer.tsx  OrganizationSwitcher.stories.tsx  OrganizationSwitcher.tsx  sidebar-navigation.ts  sidebar-utils.ts
apps/web/src/components/organizations/: CreateOrganizationDialog.tsx  CreateOrganizationForm.tsx  OrganizationMembers.tsx  organization-members-columns.tsx  organization-members-row-actions.tsx
apps/web/src/components/queries/: CitationCard.tsx  QueryHistory.stories.tsx  QueryInterface.tsx  QueryMessage.tsx  QueryResponse.stories.tsx  QueryResponse.tsx  ThreadInput.tsx  ThreadInterface.tsx
apps/web/src/components/settings/: SettingsCard.tsx  SettingsInfoCard.tsx  SettingsRow.tsx  SettingsSection.tsx  SettingsToggleRow.tsx
apps/web/src/components/spaces/: CreateSpaceDialog.tsx
apps/web/src/components/threads/: CitationCard.stories.tsx  CitationList.stories.tsx  CitationList.tsx  SpaceCardSkeleton.tsx  ThreadInput.stories.tsx  ThreadInput.tsx  ThreadInterface.tsx  ThreadListItem.stories.tsx  ThreadListItem.tsx  ThreadMessage.stories.tsx  ThreadMessage.tsx  ThreadResponse.stories.tsx  ThreadResponse.tsx  ThreadsEmptyState.tsx  ThreadsPanel.tsx
apps/web/src/constants/: streaming.ts
apps/web/src/contexts/: SpaceContext.tsx  ThreadsPanelContext.tsx
apps/web/src/graphql/mutations/: organizations.graphql  query-results.graphql
apps/web/src/graphql/queries/: dashboard.graphql  organizations.graphql  query-results.graphql
apps/web/src/hooks/: useDashboardStats.ts  useDocumentSSE.ts  useDocuments.ts  useEditorState.ts  useOrganizationMembers.ts  useQueryResults.ts  useSpaces.ts  useStreamingQuery.ts  useThreads.ts  useTipTapEditor.ts  useVectorSearch.ts
apps/web/src/hooks/queries/: useOrganizations.ts  useThread.ts
apps/web/src/lib/api/: generated.ts  hooks.generated.ts  queries-client.ts
apps/web/src/lib/query/: client.ts  provider.tsx
apps/web/src/lib/stores/: app-store.ts  auth-store.ts  index.ts  streaming-store.ts
apps/web/src/lib/tiptap/: extensions.ts
apps/web/src/store/: ui-store.ts
docs/: AGENT_TRANSPARENCY_RESEARCH.md  DOCUMENT_VIEWING_RESEARCH.md  FIGMA_WIREFRAMES_SPEC.md  MESSAGE_VERSIONING_ANALYSIS.md  ROUTE_STRUCTURE_DECISION.md  VIEW_TYPES_AND_ROUTES_ANALYSIS.md  package.json
docs/adr/: 003-micro-frontend-architecture.md  003-routing-architecture.md  004-document-folder-management-ui.md  004-nextjs-ssr-react-query.md  005-threads-standalone-route.md  006-rename-query-to-thread-backend.md  007-routing-architecture.md  008-micro-frontend-architecture.md  009-nextjs-ssr-react-query.md  README.md
docs/guides/: frontend-component-organization.md  frontend-guide.md  react-query-ssr-best-practices.md  table-component-patterns.md  vector-search-guide.md
docs/vector-searching/: VECTOR_SEARCH_TESTING_GUIDE.md
